Fixes #1081 (Executor now consistently rejects operators ++, --, += etc., Analyser warns on their occurrence).